# rust-bootstrap

./: .gitignore  Cargo.toml  README.md
archive/chapter3/christmas/src/: main.rs
archive/chapter3/temperature_convert/: Cargo.toml
archive/practice/babybson/gettestdata/: gettestdata.c  run.sh
archive/practice/calculate_percentiles/src/: lib.rs
archive/practice/crudapp/: start-mongod.sh
archive/practice/httpfetch/src/: main.rs
archive/practice/lsm/: test.sh
archive/practice/lsm/src/: main.rs
archive/practice/multiple-errors/src/: main.rs
archive/practice/nes/: Cargo.toml  README.md
archive/practice/nes/src/: cpu.rs  main.rs  opcodes.rs  run.sh
archive/practice/nes/src/cpu/: test.rs
archive/rust-book/chapter17/src/: main.rs
archive/rust-book/chapter18/src/: main.rs
archive/rust-book/chapter20/hello/src/: lib.rs
archive/rust-book/mycrate/src/: main.rs  mymod.rs
archive/rust-book/mycrate/src/mymod/: submod.rs
archive/rust-book/use-rust-driver/: Cargo.toml
archive/rust-book/use-rust-driver/src/: main.rs
archive/testdriver/: Cargo.toml
archive/testdriver/src/: main.rs
archive/use-rust-driver/follow-manual-async/: Cargo.toml  run.sh
archive/use-rust-driver/follow-manual-csfle/: Cargo.toml
archive/use-rust-driver/follow-readme-async/src/: main.rs
archive/use-rust-driver/follow-readme-sync/src/: main.rs
archive/use-rust-driver/improve-mongocryptd-spawn-error/: run.sh
chapter3/fibonacci/src/: main.rs
chapter8/median_mode/src/: main.rs
etc/: create_investigation.sh
guessing_game/src/: main.rs
in-use-encryption/: Cargo.toml
in-use-encryption/src/: main.rs
investigations/HELP-68823/: Cargo.toml  README.md  logging.md
investigations/HELP-68823/src/: main.rs
investigations/HELP-78895/: Cargo.toml  README.md
investigations/HELP-78895/src/: main.rs
investigations/RUST-1692/: Cargo.toml
investigations/RUST-1692/src/: main.rs
investigations/RUST-2217/: Cargo.toml
investigations/RUST-2217/src/: main.rs
investigations/RUST-2277/: Cargo.toml  README.md  test.sh
investigations/RUST-2277/src/: main.rs
investigations/authorizedCollections/: Cargo.toml
investigations/authorizedCollections/src/: main.rs
investigations/changestream/: Cargo.toml
investigations/changestream/src/: main.rs
investigations/decode-bson-with-dollars/: Cargo.toml
investigations/decode-bson-with-dollars/src/: main.rs
investigations/does_retry_require_abort/: Cargo.toml
investigations/does_retry_require_abort/src/: main.rs
investigations/eventapi/: Cargo.toml
investigations/eventapi/src/: main.rs
investigations/geojson/: Cargo.toml
investigations/geojson/src/: main.rs
investigations/in-use-encryption-filenotfound/: Cargo.toml  run.sh
investigations/in-use-encryption-filenotfound/src/: main.rs
investigations/serde-example/: Cargo.toml
investigations/serde-example/src/: main.rs
investigations/tagset/: Cargo.toml  README.md  primary-and-secondary-config.json  test-pymongo.py
investigations/tagset/etc/: analytics-node-replica-set-config.json.json
investigations/tagset/src/: main.rs
investigations/tlsCertificateKeyFilePassword-specialChars/: README.md
investigations/tlsCertificateKeyFilePassword-specialChars/src/: main.rs
iue/five_functions/: Cargo.toml  run.sh
iue/five_functions/src/: main.rs
mutable/src/: main.rs
pr11/: Cargo.toml
pr11/src/: main.rs
practice/babybson/: Cargo.toml
practice/babybson/gettestdata/: compile.sh
practice/babybson/src/: main.rs
practice/calculate_percentiles/: Cargo.toml
practice/calculate_percentiles/src/: lib.rs
practice/crudapp/: Cargo.toml
practice/crudapp/src/: main.rs
practice/fibonacci/src/: main.rs
practice/httpfetch/: Cargo.toml
practice/letter_counting/: Cargo.toml
practice/letter_counting/src/: main.rs
practice/linkedlist/src/: main.rs
practice/mergesort/src/: main.rs
practice/multiple-errors/: Cargo.toml
practice/nes/: KEVINALBS-README.md
practice/nes/src/: cpu.rs  main.rs  opcodes.rs
practice/threadsafe-queue/: Cargo.toml
practice/threadsafe-queue/src/: lib.rs
rust-book/: KEVINALBS-README.md  README.md
rust-book/chapter17/src/: blog.rs
rust-book/chapter19/: Cargo.toml
rust-book/chapter19/src/: main.rs
rust-book/chapter20/hello/: 404.html
rust-book/chapter20/hello/src/: main.rs
rust-book/minigrep/src/: lib.rs  main.rs
rust-by-example/chapter18/src/: main.rs
src/: main.rs
temperature_convert/src/: main.rs
test-30/: Cargo.toml
test-30/src/: main.rs
test-X509-auth/: README.md
test-X509-auth/src/: main.rs
test-tls/src/: main.rs
test-tlsCertificateKeyFilePassword/: Cargo.toml  README.md  test-pymongo.py
test-tlsCertificateKeyFilePassword/src/: main.rs
testdocs-async/: Cargo.toml
testdocs-async/src/: main.rs
testdocs-sync/: Cargo.toml
testdocs-sync/src/: main.rs
testdriver/src/: main.rs
toys/websocket-echo-server/: Cargo.toml
toys/websocket-echo-server/src/: main.rs
use-rust-driver/follow-manual-async/: mongocryptd.pid
use-rust-driver/follow-manual-async/src/: main.rs
use-rust-driver/follow-manual-csfle/: Cargo.toml  mongocryptd.pid  run.sh
use-rust-driver/follow-manual-csfle/src/: main.rs
use-rust-driver/follow-readme-async/: Cargo.toml
use-rust-driver/follow-readme-sync/: Cargo.toml
use-rust-driver/from-error/: Cargo.toml
use-rust-driver/from-error/src/: main.rs
use-rust-driver/improve-mongocryptd-spawn-error/: Cargo.toml  KEVINALBS-README.md  mongocryptd.pid
use-rust-driver/improve-mongocryptd-spawn-error/src/: main.rs
util/: Cargo.toml
util/src/: lib.rs
