[package]
name = "rust-bootstrap"
version = "0.1.0"
authors = ["Kevin Albertson <kevin.albertson@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# mongo_driver = { git = "https://github.com/thijsc/mongo-rust-driver", branch="main" }
mongo_driver = { path = "/Users/kevin.albertson/code/mongo-rust-driver" }