[package]
name = "testdriver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mongodb]
path = "/Users/kevin.albertson/review/mongo-rust-driver-1256"
features = ["openssl-tls"]

[dependencies.serde]
version = "1.0.125"

[dependencies]
serde_json = "1.0"
tokio = "1.0"
