[package]
name = "testdriver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mongodb]
git = "https://github.com/mongodb/mongo-rust-driver.git"
# Commit on ipv6-backport:
rev = "732dc54b"
features = ["openssl-tls", "cert-key-password"]

# Add pkcs8 with feature flags to enable insecure algorithms.
# Due to "Feature unification", this enables feature flags for mongodb driver.
[dependencies.pkcs8]
version = "0.10.2"
features = ["3des", "des-insecure", "sha1-insecure"]

[dependencies]
tokio = "1.0"
