[package]
name = "authorizedCollections"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
util = { path = "../../util" }
[dependencies.mongodb]
path = "/Users/kevin.albertson/review/mongo-rust-driver-1033"
features = ["tokio-runtime"]
