[package]
name = "changestream"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
util = { path = "../../util" }
tracing-subscriber = "0.3"
[dependencies.mongodb]
version = "3.2"
features = ["tracing-unstable"]
