[package]
name = "five_functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mongodb]
version = "2.8.0"
features = [ "in-use-encryption-unstable" ]

[dependencies]
tokio = { version = "1.0", features = ["full"] }

serde_json = "1.0.107"
dirs = "5.0.1"
