[package]
name = "chapter19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.hello_macro]
path = "./hello_macro"

[dependencies.hello_macro_derive]
path = "./hello_macro/hello_macro_derive"