[package]
name = "from-error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mongodb]
version = "2.6.0"
features = ["tokio-runtime"]
path = "/Users/q/code/mongo-rust-driver"

[dependencies]
tokio = { version = ">=1.0.0", features = ["full"] }

# In Cargo.toml, add the following dependency.
serde = { version = "1.0", features = ["derive"] }

# In Cargo.toml, add the following dependency.
futures = "0.3"