[package]
name = "follow-readme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mongodb]
features = ["tokio-runtime", "tracing-unstable", "in-use-encryption-unstable"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }

# In Cargo.toml, add the following dependency.
serde = { version = "1.0", features = ["derive"] }

# In Cargo.toml, add the following dependency.
futures = "0.3"

tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.17"

log = "0.4.0"
env_logger = "0.9.0"
foo = "0.0.0"
